// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Button/Default (Text) BlockButton smoke-test 1`] = `
@keyframes animation-0 {
  from {
    left: -50%;
  }

  to {
    left: 100%;
  }
}

.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 100%;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #ffffff;
}

.emotion-14 {
  width: 100%;
  position: absolute;
}

.emotion-15 {
  width: 100%;
  height: 0.25rem;
  overflow: hidden;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  position: relative;
}

.emotion-15:before {
  content: "";
  width: 100%;
  height: 0.125rem;
  display: block;
}

.emotion-16 {
  width: 50%;
  background: linear-gradient(270deg, #F814E1 0.02%, #4945EE 100%);
  height: 0.125rem;
  position: absolute;
  bottom: 0;
  top: 0;
  -webkit-animation: animation-0 1.5s infinite;
  animation: animation-0 1.5s infinite;
}

.emotion-17 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 100%;
  background-color: #1249C4;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-17:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-17:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-17:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-17:active:not(:disabled) {
  background-color: #1249C4;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Hello world
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span
                    class="emotion-9"
                  >
                    <svg
                      class="emotion-10"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                  <span>
                    Hello world
                  </span>
                  <span
                    class="emotion-9"
                  >
                    <svg
                      class="emotion-10"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-14"
                data-testid="button"
              >
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                  />
                </div>
              </div>
              <button
                class="emotion-17"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Hello world
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                disabled=""
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Hello world
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Button/Default (Text) ButtonPlayground smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-7 path {
  fill: #ffffff;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span
                    class="emotion-6"
                  >
                    <svg
                      class="emotion-7"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                  <span>
                    Hello world
                  </span>
                  <span
                    class="emotion-6"
                  >
                    <svg
                      class="emotion-7"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Button/Default (Text) ButtonTypes smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: #E7E8FF;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-7:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-7:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-7:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-7:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-13 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #CB205D;
  background-color: #FFE7F0;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-13:focus-visible:not(:disabled) {
  background-color: #FFB8D1;
}

.emotion-13:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-13:hover:not(:disabled) {
  background-color: #FFB8D1;
}

.emotion-13:active:not(:disabled) {
  background-color: #F882AC;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Primary
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-7"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Secondary
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-10"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Tertiary
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-13"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Danger
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Button/Default (Text) ButtonsWithAvatars smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-6 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-16 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-16 path {
  fill: #1249C4;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <div
                    class="emotion-6"
                    data-testid="_avatar"
                  >
                    PR
                  </div>
                  <span>
                    Text Avatar
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <div
                    class="emotion-6"
                    data-testid="_avatar"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                  <span>
                    Img Avatar
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <div
                    class="emotion-6"
                    data-testid="_avatar"
                  >
                    <span
                      class="emotion-15"
                    >
                      <svg
                        class="emotion-16"
                        fill="none"
                        viewBox="0 0 14 17"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                          fill="#54587F"
                        />
                        <path
                          d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                          fill="#54587F"
                        />
                      </svg>
                    </span>
                  </div>
                  <span>
                    Empty Avatar
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Button/Default (Text) ButtonsWithIcons smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-7 path {
  fill: #ffffff;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span
                    class="emotion-6"
                  >
                    <svg
                      class="emotion-7"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                  <span>
                    Only left Icon
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span
                    class="emotion-6"
                  >
                    <svg
                      class="emotion-7"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                  <span>
                    Both Icons
                  </span>
                  <span
                    class="emotion-6"
                  >
                    <svg
                      class="emotion-7"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Only Right Icon
                  </span>
                  <span
                    class="emotion-6"
                  >
                    <svg
                      class="emotion-7"
                      height="12px"
                      viewBox="0 0 12 6"
                      width="12px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        <polygon
                          fill-rule="nonzero"
                          id="thin_check"
                          points="1.35355339 3.64644661 0.646446609 4.35355339 5 8.70710678 12.8702016 0.836905201 12.1630948 0.12979842 5 7.29289322"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Button/Default (Text) InvertedButtonTypes smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
  background-color: #1de9b6;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-4:active:not(:disabled) {
  background-color: #0C7D61;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1de9b6;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-7:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-7:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    Inverted
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-7"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-5"
                >
                  <span>
                    InvertedAlt
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Button/Default (Text) LoadingButton smoke-test 1`] = `
@keyframes animation-0 {
  from {
    left: -50%;
  }

  to {
    left: 100%;
  }
}

.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
}

.emotion-6 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-7 {
  width: 100%;
  position: absolute;
}

.emotion-8 {
  width: 100%;
  height: 0.25rem;
  overflow: hidden;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  position: relative;
}

.emotion-8:before {
  content: "";
  width: 100%;
  height: 0.125rem;
  display: block;
}

.emotion-9 {
  width: 50%;
  background: linear-gradient(270deg, #F814E1 0.02%, #4945EE 100%);
  height: 0.125rem;
  position: absolute;
  bottom: 0;
  top: 0;
  -webkit-animation: animation-0 1.5s infinite;
  animation: animation-0 1.5s infinite;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #1249C4;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-10:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-16 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: #B9C0FF;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-16:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-16:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-16:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-16:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-22 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0.14);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-22:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-22:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-22:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-22:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-28 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #CB205D;
  background-color: #F882AC;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-28:focus-visible:not(:disabled) {
  background-color: #FFB8D1;
}

.emotion-28:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-28:hover:not(:disabled) {
  background-color: #FFB8D1;
}

.emotion-28:active:not(:disabled) {
  background-color: #F882AC;
}

.emotion-34 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
  background-color: #0C7D61;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-34:focus-visible:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-34:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-34:hover:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-34:active:not(:disabled) {
  background-color: #0C7D61;
}

.emotion-40 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1de9b6;
  background-color: rgba(84,94,255,0.14);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-40:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-40:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-40:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-40:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-43 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-43:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-43:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-43:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-43:active:not(:disabled) {
  background-color: #1249C4;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                    data-testid="button"
                  >
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-9"
                      />
                    </div>
                  </div>
                  <button
                    class="emotion-10"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span>
                        Primary
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                    data-testid="button"
                  >
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-9"
                      />
                    </div>
                  </div>
                  <button
                    class="emotion-16"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span>
                        Secondary
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                    data-testid="button"
                  >
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-9"
                      />
                    </div>
                  </div>
                  <button
                    class="emotion-22"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span>
                        Tertiary
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                    data-testid="button"
                  >
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-9"
                      />
                    </div>
                  </div>
                  <button
                    class="emotion-28"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span>
                        Danger
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                    data-testid="button"
                  >
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-9"
                      />
                    </div>
                  </div>
                  <button
                    class="emotion-34"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span>
                        Inverted
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                    data-testid="button"
                  >
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-9"
                      />
                    </div>
                  </div>
                  <button
                    class="emotion-40"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span>
                        InvertedAlt
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div>
                Press the Button below to trigger loading for 4s
              </div>
              <div
                class="emotion-6"
              >
                <button
                  class="emotion-43"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-11"
                  >
                    <span>
                      Click here
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
